[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
ssh2 = "0.9.4"
serde = "1.0.156"
reqwest = { version = "0.11", features = ["blocking"] }
urlencoding = "2.1.2"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[[bin]]
name = "cli"
path = "src/cli/main.rs"

[[bin]]
name = "webserver"
path = "src/webserver.rs"
