[package]
name = "webscp-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
ssh2 = "0.9.4"
serde = "1.0.156"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
urlencoding = "2.1.2"
json = "0.12.4"
flate2 = "1.0.25"
tar = "0.4.38"
tokio = { version = "1.27.0", features = ["macros", "io-util", "process"] }
rand = "0.8.5"
sha256 = "1.1.2"
regex = "1.7.3"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dev-dependencies]
rustfmt = "0.10.0"

[[bin]]
name = "cli"
path = "src/cli/main.rs"

[[bin]]
name = "webserver"
path = "src/web/server.rs"
